# corridor

./: .gitignore  Cargo.toml  Makefile
scripts/: generate_network.py  voronoi.py
src/: app.rs  config.rs  lib.rs  main.rs  state.rs
src/geometry/: mesh.rs  mod.rs
src/graphics/: mod.rs
src/graphics/geometry/: cube.rs
src/graphics/rendering/: buffers.rs  context.rs  lighting.rs  mod.rs  picking.rs  pipeline.rs  renderer.rs
src/graphics/scene/: camera.rs  cpu_picking.rs  demo.rs  material.rs  mod.rs  network.rs  node.rs  picking.rs  transform.rs
src/graphics/shaders/: cube.wgsl  mod.rs  picking.wgsl  scene.wgsl
src/graphics/ui/: egui_integration.rs  mod.rs  panels.rs
src/model/: graph.rs  mod.rs  types.rs
src/rendering/: buffers.rs  context.rs  lighting.rs  mod.rs  pipeline.rs  renderer.rs
src/scene/: camera.rs  demo.rs  mod.rs
src/shaders/: cube.wgsl
src/ui/: egui_integration.rs  mod.rs  panels.rs
web/: index.html
