[package]
name = "corridor"
version = "0.1.0"
edition = "2024"

[lib]
name = "corridor"
crate-type = ["rlib", "cdylib"]

[dependencies]
bytemuck = { version = "1.20", features = ["derive"] }
egui = "0.33"
egui-wgpu = "0.33"
glam = "0.30.9"
instant = { version = "0.1", features = ["wasm-bindgen"] }
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.33" }
wgpu = "27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
egui-winit = { version = "0.33", default-features = false, features = ["links"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement","Element"] }
wgpu = { version = "27", default-features = false, features = ["webgl"]}
